src/objects/SLX_Product__c.object
<CustomObject>
    <fields>
        <fullName>Base_Commission__c</fullName>
        <label>Base Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billed_In_Advance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bill in advance, not arrears.</description>
        <label>Billed In Advance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Ghost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display this product only in the checkout but don&apos;t apply to the order.</description>
        <label>Is Ghost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Package_Id__c</fullName>
        <label>Package Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>AdWords</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdMob</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimise Magazine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instagram</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Features__c</fullName>
        <label>Product Features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Package__c</fullName>
        <label>Product Package</label>
        <picklist>
            <picklistValues>
                <fullName>No Package</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimised Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate BRONZE Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate SILVER Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate GOLD Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate DIAMOND Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate PLATINUM Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600MB Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Starter Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Business Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Article Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Article Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Brand Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Fast Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Local &amp; National Campaign Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Local Campaign Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Local Campaign + Analytics Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO National Campaign Package</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Products__c</fullName>
        <label>Upgrades</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Xero_Account_Code__c</fullName>
        <description>Account Code in Xero for current product. This is needed to raise an APPROVED invoice in Xero.
DRAFT invoices do not need this specified.</description>
        <inlineHelpText>Account Code in Xero for current product. This is needed to raise an APPROVED invoice in Xero.
DRAFT invoices do not need this specified.
If you are creating a new product you need to ask Monica (or other Account people) for this code from Xero.</inlineHelpText>
        <label>Xero Account Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_name__c</fullName>
        <label>Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>SponsoredLinx</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Get More Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crank IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iiConnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJB Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SponsoredLinX New Zealand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get More Traffic New Zealand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>product_description__c</fullName>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>product_max_usage__c</fullName>
        <label>Product Max Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product_price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product_recurring__c</fullName>
        <label>Product Recurring</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>recurring_period__c</fullName>
        <label>Recurring Period</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortnightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BJB Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsActive__c</columns>
        <columns>ProductCode__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Package__c</columns>
        <columns>product_recurring__c</columns>
        <columns>recurring_period__c</columns>
        <columns>product_price__c</columns>
        <columns>company_name__c</columns>
        <columns>Xero_Account_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BJB Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Currency_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(company_name__c, &apos;SponsoredLinX New Zealand&apos;), NOT(ISPICKVAL(CurrencyIsoCode, &apos;NZD&apos;)))</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>NZ Product must use NZD</errorMessage>
    </validationRules>
</CustomObject>